<resources>
    <string name="app_name">Movie DB</string>
    <string name="title_home">Movie DB Home</string>
    <string name="movie_nav">Movies</string>
    <string name="tv_show_nav">TV Shows</string>
    <string name="title_movie">Aquaman</string>
    <string name="overview_movie">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="release_date_movie">2018–12–07</string>
    <string name="film_poster">Film Poster</string>
    <string name="bar_title_movie">Popular Movies</string>
    <string name="bar_title_tv">Popular TV Shows</string>
    <string name="bar_title_favourite_movie">Favourite List</string>
    <string name="loading_data">Loading get data. Please wait …</string>
    <string name="language_settings">Change language settings</string>
    <string name="reload_app">Reload get data</string>
    <string name="instruction_restart">Successfully change settings please refresh app</string>
    <string name="title_activity_movie_detail" translatable="false">MovieDetailActivity</string>
    <string name="action_menu_favourite">Add as favourite</string>
    <string name="poster_image">Poster Image</string>
    <string name="tv_title">Title:</string>
    <string name="tv_release_date">Release date:</string>
    <string name="tv_18">Content for:</string>
    <string name="tv_current_status">Current status:</string>
    <string name="tv_overview">Overview:</string>
    <string name="tv_original_language">Original language:</string>
    <string name="tv_homepage">Homepage:</string>
    <string name="tv_vote_average">Vote Average:</string>
    <string name="img_poster_image">Poster Image</string>
    <string name="tv_original_name">Original name:</string>
    <string name="tv_first_air_date">First air date:</string>
    <string name="update_db">Favourite list has been updated</string>
    <string name="favorite">Favorite</string>
    <string name="key_preference" translatable="false">movie_catalogue_setting</string>
    <string name="key_favourite" translatable="false">is_favourite_changed</string>
    <string name="key_daily_reminder" translatable="false">daily_reminder_service</string>
    <string name="key_released_today_reminder" translatable="false">key_released_today_reminder</string>
    <string name="succes_add_favourite">Success add to Favourite list</string>
    <string name="succes_remove_favourite">Success removed from Favourite list</string>
    <string name="fail_change_stat">Ops something wrong</string>
    <string name="submit_search">Search</string>
    <string name="search_field">Fill first</string>
    <string name="search_not_available">Search not available for this page</string>
    <string name="search_placeholder">Search your choice here</string>
    <string name="nav_header_title" translatable="false">Movie Database</string>
    <string name="nav_header_subtitle">Explore the world of movie</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_remainder">Reminder</string>
    <string name="menu_released_now">Released Now</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">About</string>
    <string name="list_empty_widget">Favourite list has empty</string>
    <string name="navigation_drawer_open" translatable="false">Side menu</string>
    <string name="navigation_drawer_close" translatable="false">Side menu closed</string>
    <string name="sharing_app">Hey checkout amazing movie database open source at https:github.com/forderation/MovieCatalogue</string>
    <string name="communicate">Communicate</string>
    <string name="about_content">Movie DB is a movie catalog and television show application that is based on the API themoviedb.org for the final project of the google developer kejar program and dicoding. the application is still under development you can contribute via git. author: Kharisma Muzaki Ghufron.</string>
    <string name="google_developer_kejar" translatable="false">google developer kejar</string>
    <string name="release_today_notify">New released today</string>
    <string name="new_released_movies">new released movies</string>
    <string name="list_released_notify">List released today</string>
    <string name="group_key_notify" translatable="false">group key release today</string>
    <string name="daily_notify_title">Movie DB Miss You</string>
    <string name="daily_notify_content">click here to see what\'s new</string>
    <string name="today_release_notify">Today release</string>
    <string name="showcase_bottom_nav">Navigation you can explore movie, tv show, or your favourite bookmark</string>
    <string name="showcase_toolbar">Set your language in right and get application menu in left</string>
    <string name="showcase_search">Explore and search your movie here</string>
    <string name="showcase_container_fragment">List item movie you can click it to view details</string>
    <string name="setting_reminder_notification">Setting reminder notification</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_desc">Reminder showing the movie that released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_desc">Reminder for return to app</string>
    <string name="dicoding" translatable="false">dicoding</string>
    <string name="released_today_deactivated">Released today reminder has been deactivated</string>
    <string name="released_today_activated">Daily released today reminder has been activated</string>
    <string name="released_today_activate_fail">Fail to activate daily released today reminder</string>
    <string name="daily_reminder_deactivated">Daily reminder has been deactivated</string>
    <string name="daily_reminder_activated">Daily reminder has been activated</string>
    <string name="fail_activated_daily_reminder">Fail to activate daily reminder</string>
</resources>
