<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_remainder" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_perm_device_information_black_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
