<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rv_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_poster"
            android:transitionName="poster"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleType="fitCenter"
            tools:src="@drawable/poster_aquaman"
            android:contentDescription="@string/film_poster" />
        <TextView
            android:id="@+id/tv_item_title"
            android:transitionName="title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_item_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:text="@string/title_movie" />
        <TextView
            android:id="@+id/tv_item_date"
            android:transitionName="release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_title"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:textColor="@color/colorAccentSecondary"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_item_poster"
            tools:text="@string/release_date_movie" />
        <TextView
            android:id="@+id/tv_item_overview"
            android:transitionName="overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccentSecondary"
            android:layout_below="@id/tv_item_date"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/img_item_poster"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/overview_movie" />
    </RelativeLayout>
</android.support.v7.widget.CardView>