<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moviecatalogue.AboutActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:background="@drawable/shape_about"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <ImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_layout_about"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/about_content"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/gdk_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/google_developer_kejar"
            android:scaleType="fitCenter"
            android:src="@drawable/gdk" />

        <ImageView
            android:id="@+id/dicoding_logo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="right"
            android:scaleType="fitCenter"
            android:src="@drawable/dicoding"
            android:contentDescription="@string/dicoding" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>