<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MovieDetailActivity"
    android:background="@color/colorPrimaryDark"
    tools:showIn="@layout/activity_movie_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image_poster"
            android:transitionName="poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            tools:src="@drawable/poster_avengerinfinity"
            android:contentDescription="@string/img_poster_image" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:transitionName="title"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:transitionName="release_date"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_adult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/image_poster" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:transitionName="overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_original_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/tv_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_language" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tv_title"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_release_date"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_18"
            app:layout_constraintStart_toStartOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/image_poster" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_overview"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/tv_adult" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_original_language"
            app:layout_constraintStart_toStartOf="@+id/tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:textColor="@color/colorAccentSecondary"
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_vote_average"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_language" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>